--- a/global_css_js/global.css
+++ b/global_css_js/global.css
@@ -205,12 +205,16 @@ body::-webkit-scrollbar-thumb:hover {
     margin: 0;
     padding: 40px 40px 40px 120px;
     height: calc(100vh - 60px);
-    grid-template-rows: 300px 40px 230px;
+    grid-template-rows: 300px 40px auto;
     overflow-y: auto;
 }
 
 .account-information-grid.supply_chain {
     padding: 40px 40px 40px 40px;
+}
+
+.account-information-grid.supply_chain.admin {
+    padding: 40px 40px 40px 120px;
 }
 /* #endregion */
 
@@ -427,6 +431,7 @@ body::-webkit-scrollbar-thumb:hover {
     margin-bottom: 10px;
     font-family: 'Afacad Flux', sans-serif;
 }
+
 /* #endregion */
 
 /* #region Account details error styling */
@@ -467,6 +472,14 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .error-container.lname > .account-details-errors{
+    display: none;
+}
+
+.error-container.old_password > .account-details-errors{
+    display: none;
+}
+
+.error-container.new_password > .account-details-errors{
     display: none;
 }
 
@@ -582,6 +595,11 @@ body::-webkit-scrollbar-thumb:hover {
     cursor: not-allowed; 
 }
 
+#confirmpasswordChange[disabled] { 
+    background-color: grey; 
+    cursor: not-allowed; 
+}
+
 .profilepicbuttoncontainer > #reverttooriginal{
     background-color: #062f3dc5;
     font-weight: 600;
@@ -613,3 +631,11 @@ body::-webkit-scrollbar-thumb:hover {
 /* #endregion */
 
 /* #endregion */
+
+.aig-ri-6.double{
+    display: none;
+}
+
+.aig-ri-6.double.show{
+    display: flex;
+}
