--- a/data_generator2/css/style.css
+++ b/data_generator2/css/style.css
@@ -9,6 +9,7 @@
 body{
     font-family: "Afacad Flux", serif;
     background: linear-gradient(to right, #e6e6e6, #d7e1ff);
+    overflow: auto;
 }
 
 /* #region Grid Layout*/
@@ -100,7 +101,7 @@ body{
     display: grid;
     grid-template-columns: repeat(12, 1fr); 
     gap: 20px;
-    height: 100vh;
+    height: 130vh;
     grid-template-rows: 80px 80px 80px 80px 80px;
     padding: 65px 70px;
     position: relative;
@@ -146,6 +147,7 @@ body{
     justify-content: center;
     align-items: center;
     z-index: 5;
+    overflow: auto;
 }
 
 .table-container {
